# russian-smb-devsecops-templates

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
ci_security_templates/: README.md
ci_security_templates/ai_pipeline_helpers/: __init__.py  base.py  pipeline_generator.py
ci_security_templates/github/node/: README.md  ci.yml
ci_security_templates/github/php_bitrix/: README.md  ci.yml
ci_security_templates/github/python/: README.md  ci.yml
ci_security_templates/github/shared/: steps_security.md
ci_security_templates/gitlab/node/: .gitlab-ci.yml  README.md
ci_security_templates/gitlab/php_bitrix/: .gitlab-ci.yml  README.md
ci_security_templates/gitlab/python/: .gitlab-ci.yml  README.md
logging_stack/: README.md
logging_stack/ai_helpers/: __init__.py  base.py  incident_description.py  log_parser_suggestions.py
logging_stack/elk/: docker-compose.elk.yml
logging_stack/elk/filebeat/: filebeat-1c.yml  filebeat-bitrix.yml  filebeat-mail.yml  filebeat-nginx.yml  filebeat-vpn.yml
logging_stack/grafana/alerts/: alert_rules.yml
logging_stack/grafana/dashboards/: auth_failures_security.json  nginx_http_errors_compact.json  russian_smb_logging_overview.json
logging_stack/loki/: docker-compose.loki.yml
logging_stack/loki/promtail/: promtail-config.yml
logging_stack/parsers/bitrix/: bitrix_php_fpm_log_pattern.md
logging_stack/parsers/mail/: postfix_log_pattern.md
logging_stack/parsers/nginx/: nginx_access_log_pattern.md
router-policy-to-config/: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  pyproject.toml  setup.cfg
router-policy-to-config/ai_providers/: __init__.py  mock_provider.py
router-policy-to-config/examples/: guest-wifi.yaml  home-office.yaml
router-policy-to-config/lab/: README.md  docker-compose.yaml
router-policy-to-config/lab/openwrt/config/: firewall.base  network.base
router-policy-to-config/lab/routeros/config/: base.rsc
router-policy-to-config/lab/tests/: connectivity_scenarios.yaml  firewall_scenarios.yaml
router-policy-to-config/schema/: openwrt-config-schema.yaml  policy-schema.yaml  routeros-export-schema.yaml
router-policy-to-config/scripts/: format.sh  lint.sh  security_scan.sh
router-policy-to-config/src/router_policy_to_config/: __init__.py  cli.py  model.py  policy_loader.py  policy_validator.py
router-policy-to-config/src/router_policy_to_config/ai/: __init__.py  policy_nl_to_yaml.py  test_case_generator.py
router-policy-to-config/src/router_policy_to_config/ai_providers/: __init__.py  base.py  mock_provider.py
router-policy-to-config/src/router_policy_to_config/backends/: __init__.py  openwrt_backend.py  routeros_backend.py
router-policy-to-config/src/router_policy_to_config/diff/: __init__.py  openwrt_diff.py  routeros_diff.py
router-policy-to-config/tests/unit/: test_policy_loader.py  test_policy_validator.py  test_routeros_backend.py
scripts/: lint.sh  perf_check.sh  security_scan.sh
tests/integration/: test_github_php_bitrix_template.py  test_gitlab_python_template.py
tests/unit/: test_ai_helpers_mock.py  test_validate_ci_templates.py  test_validate_logging_configs.py
tools/: generate_example_project.py  validate_ci_templates.py  validate_logging_configs.py
(+21 files in other folders)
