[metadata]
name = router-policy-to-config
version = 0.1.0
description = AI-assisted copilot for router configuration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ranas-mukminov/russian-smb-devsecops-templates
author = run-as-daemon
author_email = contact@run-as-daemon.ru
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Networking
    Topic :: System :: Systems Administration

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    pyyaml>=6.0
    jsonschema>=4.17
    typer>=0.9.0
    rich>=13.0
    requests>=2.31
    jinja2>=3.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    router-policy = router_policy_to_config.cli:main
